--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
+/* styles.css */
+.slide-fade-in {
+    opacity: 0;
+    transform: translateX(100%);
+    transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
+  }
+  
+  .slide-fade-in.visible {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  /* For fading in from the right */
+.fade-up {
+    opacity: 0;
+    transform: translateX(50px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+  }
+  
+  .fade-up.visible {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  
+  /* Hover effect for the progress bar */
+  .progress-bar-container {
+    transition: transform 0.3s ease;
+  }
+  
+  .progress-bar-container:hover {
+    transform: scale(1.05);
+  }
+  
+  html {
+    scroll-behavior: smooth;
+  }
+  
+  
+  
